examples/test/testpolicy14060.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14060
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key2: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value23
      podSelector:
        matchLabels:
          key48: value6
          key24: value1
          key8: value40
